--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,1 @@
-data/store-sales-time-series-forecasting/train.csv filter=lfs diff=lfs merge=lfs -text
-data/encoded_dataframe.csv filter=lfs diff=lfs merge=lfs -text
+*.ckpt filter=lfs diff=lfs merge=lfs -text
